syntax = "proto3";

package io.app.price.api;

option go_package = "service/";

import "internal/transport/grpc/proto_service/transaction.proto";

message BlockResponse {
  bool success = 1;
  string message = 2;
  Block block = 3;
}

message BlockRequest {
  int64 blockNumber = 1;
}

message Block {
  int64 number = 1;
  string Hash = 2;
  int32 txCount = 3;
  repeated Transaction transactions = 4;
}
